template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: glue handson template

Parameters:
  S3BucketName:
    Type: String
    Description: S3 Bucket Name
    Default: 'glue-handson'
  
  StackPrefix:
    Type: String
    Description: Prefix to set to IAM Role Resources
    Default: 'glue-handson'
  
  DBPassword:
    AllowedPattern: '[a-zA-Z0-9]+'
    ConstraintDescription: must contain only alphanumeric characters. Must have length 8-41.
    Description: Database admin account password.
    MaxLength: '41'
    MinLength: '8'
    Default: 'S3cretPwd99'
    Type: String
    # NoEcho: true
  
  EC2AMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
  
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1
  
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet2

  IGW:
    Type: AWS::EC2::InternetGateway

  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  RouteTablePublicSubnet1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  
  RouteTablePublicSubnet2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  RouteTableAssociationPublicSubnet1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTablePublicSubnet1
  
  RouteTableAssociationPublicSubnet2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTablePublicSubnet2

  RouteTablePublicSubnet1InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttach
    Properties:
      RouteTableId: !Ref RouteTablePublicSubnet1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
  
  RouteTablePublicSubnet2InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttach
    Properties:
      RouteTableId: !Ref RouteTablePublicSubnet2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
  
  WorkshopSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: WorkshopSG
      GroupDescription: SG for workshop
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22

  WorkshopSGSelfReference:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref WorkshopSG
      IpProtocol: -1
      SourceSecurityGroupId: !Ref WorkshopSG

  S3Bucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Delete
    Properties:
      AccessControl: BucketOwnerFullControl
      BucketName: !Join [ '-', [!Ref S3BucketName, !Ref 'AWS::AccountId'] ]
  
  S3VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: {
            "Statement":[{
                "Effect":"Allow",
                "Principal": "*",
                "Action":"*",
                "Resource":"*"
            }]
        }
      RouteTableIds:
        - !Ref RouteTablePublicSubnet1
        - !Ref RouteTablePublicSubnet2
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcEndpointType: Gateway
      VpcId: !Ref VPC
  
  # DB
  DBSubnetGroup: 
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupDescription: DB Subnet Group
      SubnetIds: 
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
  
  # custdb
  CustDBInstance:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      DBInstanceClass: db.t3.micro
      AllocatedStorage: "20"
      StorageType: gp2
      Engine: MySQL
      EngineVersion: 5.7.34
      MasterUsername: "master"
      MasterUserPassword: !Ref DBPassword
      DBName: custdb
      BackupRetentionPeriod: 0
      MultiAZ: false
      AvailabilityZone: !Select [ 0, !GetAZs ]
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref WorkshopSG
      Tags:
        - Key: Name
          Value: custdb

  # custsitedb
  CustSiteDBInstance:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      DBInstanceClass: db.t3.micro
      AllocatedStorage: "20"
      StorageType: gp2
      Engine: MySQL
      EngineVersion: 5.7.34
      MasterUsername: "master"
      MasterUserPassword: !Ref DBPassword
      DBName: custsitedb
      BackupRetentionPeriod: 0
      MultiAZ: false
      AvailabilityZone: !Select [ 0, !GetAZs ]
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref WorkshopSG
      Tags:
        - Key: Name
          Value: custsitedb

  # EC2 for init DB
  EC2ForInitDB:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2AMI
      InstanceType: t3.micro
      SubnetId: !Ref PublicSubnet1
      UserData:
        Fn::Base64: !Sub
          - |
            #! /bin/bash
            yum update -y
            yum install -y wget mysql-devel mysql

            wget -O ./custdb.sql https://raw.githubusercontent.com/unirt/salesdb/master/custdb.sql
            wget -O ./custsitedb.sql https://raw.githubusercontent.com/unirt/salesdb/master/custsitedb.sql

            chmod +x ./custdb.sql
            chmod +x ./custsitedb.sql

            mysql -f -u master -h ${CustDBEndpoint} --password="${DBPassword}" < ./custdb.sql
            mysql -f -u master -h ${CustSiteDBEndpoint} --password="${DBPassword}" < ./custsitedb.sql

            wget -O ./agg_data_job.py https://raw.githubusercontent.com/unirt/salesdb/master/agg_data_job.py
            sed -i -e '10i OUTPUT_DIR = \"s3:\/\/${S3BucketName}\/outputs\/customer_dim\"' ./agg_data_job.py
            aws s3 cp ./agg_data_job.py s3://${S3BucketName}/
          - {
              CustDBEndpoint: !GetAtt CustDBInstance.Endpoint.Address,
              CustSiteDBEndpoint: !GetAtt CustSiteDBInstance.Endpoint.Address,
              DBPassword: !Ref DBPassword,
              S3BucketName: !Join [ '-', [!Ref S3BucketName, !Ref 'AWS::AccountId'] ]
            }
      SecurityGroupIds:
        - !Ref WorkshopSG
      IamInstanceProfile: !Ref S3FullAccessInstanceProfile
      Tags:
        - Key: Name
          Value: EC2ForInitDB

  # IAM
  GlueServiceRole:
    Type: AWS::IAM::Role
    Properties:
        AssumeRolePolicyDocument:
          Version: 2012-10-17
          Statement:
            - Effect: Allow
              Principal:
                Service:
                  - glue.amazonaws.com
                  - states.amazonaws.com
              Action:
                - sts:AssumeRole
        RoleName: !Join [ '-', [!Ref StackPrefix, 'GlueServiceRole'] ]
        ManagedPolicyArns:
          - 'arn:aws:iam::aws:policy/service-role/AWSGlueServiceRole'
          - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
          - 'arn:aws:iam::aws:policy/AmazonElasticMapReduceFullAccess'
          - 'arn:aws:iam::aws:policy/AWSStepFunctionsFullAccess'
          - 'arn:aws:iam::aws:policy/AmazonAthenaFullAccess'
  
  S3FullAccessRole:
    Type: AWS::IAM::Role
    Properties:
        AssumeRolePolicyDocument:
          Version: 2012-10-17
          Statement:
            - Effect: Allow
              Principal:
                Service:
                  - ec2.amazonaws.com
              Action:
                - sts:AssumeRole
        RoleName: !Join [ '-', [!Ref StackPrefix, 'S3FullAccessRole'] ]
        ManagedPolicyArns:
          - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
  
  S3FullAccessInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref S3FullAccessRole

Outputs:
  CustDBInstanceId:
    Description: CustDBInstance ID
    Value: !Ref CustDBInstance
  CustSiteDBInstanceId:
    Description: CustSiteDBInstance ID
    Value: !Ref CustSiteDBInstance
  S3BucketArn:
    Description: S3 Bucket ARN
    Value: !GetAtt S3Bucket.Arn
